sensord (0.6.36) unstable; urgency=low

  [Antti Virtanen]
  * SocketHandler socket initialization logic simplified.
  * SocketReader improved
    - It now reads from socket to data vector directly.
    - Socket "tag" handling simplified: done during connection establishment.
    - dataReceived() for frame aware sensors simplified.
    - SocketReader::read() will now handle better partially read segments.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 20 Jan 2011 17:44:16 +0200

sensord (0.6.35) unstable; urgency=low

  [Lihan Guo]
  * Combined listen and control session.

  [Shenghua Liu]
  * Seperate the old sensord fold to core and new sensord folders.
  * Fixed randomly failing contextfw tests. Fixes: NB#219695

  [Antti Virtanen]
  * SocketHandler doesn't anymore delegate the work through QTimer if the data must be sent immediately. Small refactoring also done.
  * testBufferingInterval test added for verifying bufferInterval functionality.
  * Refactored SensorManager.
  * SocketHandler now listens for QLocalSocket::error() signals.
  * Implemented AbstractSensorChannelInterface::hwBuffering() accessor.
  * For settable properties in AbstractSensorChannelInteface get-accessor now has following effect:
    - If sensor is started it will query value from sensord.
    - If sensor is stopped it will return given value set in AbstractSensorChannelInteface or default value if nothing has been set.

    Fixes: NB#218971.
  * Optimized some foreach-statements.
  * Compatible with mce-dev-1.10.24. Fixes: NB#219223.

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Thu, 20 Jan 2011 09:58:21 +0200

sensord (0.6.34) unstable; urgency=low

  [Antti Virtanen]
  * propertyChanged signals aren't anymore sent through dbus to apps since qmSystem nor QtMob Sensors API supports property notifications. Fixes: NB#216173.
  * Refactored ALSAdaptorAscii: removed unnecessary members, fixed missing initializations and simplified the constructor.