@@ -1,14 +1,19 @@
 sensord (0.6.36) unstable; urgency=low
 
   [Antti Virtanen]
-  * SocketHandler socket initialization logic simplified.
+  * SocketHandler improved
+    - Socket initialization logic simplified.
+    - Error fixed from delayed frame sending.
   * SocketReader improved
     - It now reads from socket to data vector directly.
     - Socket "tag" handling simplified: done during connection establishment.
     - dataReceived() for frame aware sensors simplified.
     - SocketReader::read() will now handle better partially read segments.
+    - Failed prefix reading will drain socket from invalid data.
+  * Fixed data read logic for sensors.
+  * ClientApiTest::testBufferingInterval test logic fixed.
 
- -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 20 Jan 2011 17:44:16 +0200
+ -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 21 Jan 2011 14:43:25 +0200
 
 sensord (0.6.35) unstable; urgency=low
 
